# flashcards

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
include/: cards.h  common.h  deck_serializer.h  decks.h  flashcard.h  menu.h  menu_handler.h  user_data_bus.h
src/: cards.c  deck_serializer.c  decks.c  flashcard.c  main.c  menu.c  menu_handler.c  user_data_bus.c
